final project with added users in database, revisions by Spring Envers and all tested